# NeoMax

./: LICENSE  Makefile  README.md  pyproject.toml
neomax/enums/: __init__.py  chat_admin_permission.py
neomax/types/: __init__.py  base.py  bot_command.py  bot_info.py  chat_member.py  user.py  user_with_photo.py
